--- a/BetaCode/src/App.css
+++ b/BetaCode/src/App.css
@@ -1,3 +1,4 @@
+
 body {
   background-color: lightgrey;
   display: flex;
@@ -8,6 +9,15 @@ body {
   color: black;
 }
 
+.custom-modal .modal-content {
+  background-color: #ccc !important; /* Light gray */
+  color: black; /* Optional: Change text color for contrast */
+}
+.Options{
+  background-color: white;
+  text-align: center;
+  border-radius: 50px;
+}
 hr {
   border: 2px solid black;
   height: 0;
@@ -20,7 +30,7 @@ hr {
 .Container {
   display: flex;
   width: 100%;
-  gap: 5%;
+  gap: 2%;
 }
 
 .Text-Info {
@@ -37,6 +47,7 @@ hr {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   max-width: 800px;
   margin: auto;
+  width: 100rem;
 }
 
 .FormInput form {
