--- a/BetaCode/src/Register.css
+++ b/BetaCode/src/Register.css
@@ -48,7 +48,8 @@
 
   input,
   select,
-  button {
+  button,
+  .roleSelect{
     padding: 8px;
     font-size: 1rem;
   }
@@ -56,7 +57,8 @@
 
 /* Input and Button Styling */
 input,
-select {
+select,
+.roleSelect {
   display: block;
   width: 100%;
   padding: 10px;
