--- a/BetaCode/src/index.css
+++ b/BetaCode/src/index.css
@@ -1,7 +1,5 @@
 @import "tailwindcss";
-:root {
-  background-color: transparent !important;
-}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -11,13 +9,13 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+/* body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-}
+} */
 
 h1 {
   font-size: 3.2em;
