--- a/BetaCode/src/updatepromo.css
+++ b/BetaCode/src/updatepromo.css
@@ -1,3 +1,7 @@
+.User{
+  margin-top: 5%;
+}
+
 .toggle-container {
     display: flex;
     flex-direction: column;
@@ -67,6 +71,9 @@
   
   /* Responsive Design */
   @media (max-width: 768px) {
+    .User{
+  margin-top: 25%;
+}
     .toggle-container {
       width: 90%;
       max-width: 100%;
@@ -84,6 +91,9 @@
   }
   
   @media (max-width: 480px) {
+        .User{
+  margin-top: 65%;
+}
     .toggle-container {
       padding: 10px;
     }
