--- a/BetaCode/src/Register.css
+++ b/BetaCode/src/Register.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 90vh;
+  height: 95vh;
   width: 100%; /* Use percentage instead of fixed vh */
   padding: 20px;
 }
@@ -36,6 +36,9 @@
 }
 
 @media (max-width: 480px) {
+  .container {
+    margin-top: 60%;
+  }
   .form-section {
     width: 95%;
     padding: 15px;
